versao final aula

--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula 28/02</title>
+    <link rel="icon" type="image/png" href="./assets/icone.png" />
 </head>
+
 <body>
-    
+
+    <h1>Minha página maravilhosa</h1>
+
+    <form action="/serverteste" method="POST">
+        <div>
+            <label>Nome:</label>
+            <input type="text" id="nome" name="nome">    
+        </div>
+        <div>
+            <label>Idade:</label>
+            <input type="text" id="idade" name="idade">
+        </div>
+        <div>
+            <input type="submit" value="Submit">    
+        </div>
+    </form>
+
 </body>
+
 </html>
