--- a/botoes.html
+++ b/botoes.html
@@ -4,34 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Botões</title>
-    <link rel="stylesheet" href="estilos.css" />
+    <link rel="stylesheet" href="super-estilos.css" />
 </head>
 <body>
     
     <h1>Botões</h1>
 
-    <span class="btnCancelar">
+    <span class="btn btn-secoundary btn-sm">
         Cancelar
     </span>
-    <button class="btnErro">
-        Erro
-    </button>
-    <button class="btnOk">
-        Ok
-    </button>
-    <button class="btnErro">
-        Ver problemas
-    </button>
-    <span class="btnCancelar">
-        Desistir
+    <span class="btn btn-primary btn-md">
+        Logout
     </span>
+    <a class="btn btn-success btn-lg">
+        Salvar
+    </a>
 
-    <p id="teste">
+    <p >
+        Mussum Ipsum, cacilds vidis litro abertis. Mauris nec dolor in eros commodo tempor.
+        <span>estou dentro de um p</span>
+    </p>
+    <p >
         Mussum Ipsum, cacilds vidis litro abertis. Mauris nec dolor in eros commodo tempor.
     </p>
-    <span class="btnCancelar">
-        Mussum Ipsum, cacilds vidis litro abertis. Mauris nec dolor in eros commodo tempor.
-    </span>
     <p>
         Mussum Ipsum, cacilds vidis litro abertis. Mauris nec dolor in eros commodo tempor.
     </p>
