--- a/Aula2603/index.html
+++ b/Aula2603/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste Javascript</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Workbench&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
-    <h1>oi Javascript</h1>
-    <div id="cxa_num" style="font-size: 38pt;">
+
+    <h1 style="font-family: 'Pixelify sans';">
+        oi Javascript
+    </h1>
+    <div id="cxa_num" style="font-size: 48pt; font-family: 'Pixelify sans'">
         0
     </div>
     <script type="module" src="./callback.js"></script>
+    <script type="module" src="./relogio.js"></script>
 </body>
+
 </html>
