--- a/Aula0204/index.html
+++ b/Aula0204/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FETCH</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <h1>FETCH</h1>
+    <button id="btn01" class="btn btn-primary">Novo Usuário</button>
 
+    <div class="row">
+        <div class="col-2">
+            <div class="m-1">
+                <img id="photo" style="width: 200px" class="img-thumbnail" src="" alt="">
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="d-flex d-row">
+                <div class="pe-2 fw-semibold fs-2">Nome:</div>
+                <div id="boxName" class="fs-2">um nome</div>
+            </div>
+        </div>
+    </div>
     <script src="fecth.js" type="module"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></body>
 </html>
