--- a/Aula0904/index.html
+++ b/Aula0904/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     
-    <h1 class="border p-1 m-1 bg-blue-300 rounded">Todo List</h1>
+    <h1 class="border p-1 m-1 bg-orange-300 text-gray-600 rounded">
+        Todo List
+    </h1>
 
     <script src="main.js" type="module"></script>
 </body>
