--- a/Aula0904/index.html
+++ b/Aula0904/index.html
@@ -12,6 +12,11 @@
         Todo List
     </h1>
 
+    <div id="app">
+
+    </div>
+
+    
     <script src="main.js" type="module"></script>
 </body>
 </html>
